# RebrewU

./: CMakeLists.txt  README.md
Gambit/: Gambit_part0000.cpp  Gambit_part0001.cpp  Gambit_part0003.cpp  Gambit_part0004.cpp  Gambit_part0005.cpp  Gambit_part0006.cpp  Gambit_part0007.cpp  Gambit_part0008.cpp  Gambit_part0009.cpp  Gambit_part0010.cpp  Gambit_part0011.cpp  Gambit_part0012.cpp  Gambit_part0013.cpp  Gambit_part0014.cpp  Gambit_part0015.cpp  Gambit_part0016.cpp  Gambit_part0017.cpp  Gambit_part0018.cpp  Gambit_part0019.cpp  Gambit_part0020.cpp  Gambit_part0021.cpp  Gambit_part0022.cpp  Gambit_part0023.cpp  Gambit_part0024.cpp  Gambit_part0025.cpp  Gambit_part0026.cpp  Gambit_part0027.cpp  Gambit_part0028.cpp  Gambit_part0029.cpp  Gambit_part0030.cpp  Gambit_part0031.cpp  Gambit_part0032.cpp  Gambit_part0033.cpp  Gambit_part0034.cpp  Gambit_part0035.cpp  Gambit_part0036.cpp  Gambit_part0037.cpp  Gambit_part0038.cpp  Gambit_part0039.cpp  Gambit_part0040.cpp  (+168 more)
RebrewU/: CMakeLists.txt  RebrewU.sln  sample_config.toml
RebrewU/RebrewAnalyse/: CMakeLists.txt  RebrewAnalyse.vcxproj  function.cpp  function.h  main.cpp  rpx_analyzer.cpp  rpx_analyzer.h
RebrewU/RebrewRecomp/: CMakeLists.txt  RebrewRecomp.vcxproj  main.cpp  pch.h  recompiler.cpp  recompiler.h  recompiler_config.cpp  recompiler_config.h
RebrewU/RebrewUtils/: CMakeLists.txt  RebrewUtils.vcxproj  disasm.cpp  disasm.h  file.cpp  file.h  ppc_context.h  rpx_image.cpp  rpx_image.h  wiiu_ppc.h
cmake/: CompilerOptions.cmake  RebrewUConfig.cmake.in
include/rebrewu/: version.hpp
port/: CMakeLists.txt  README.md  dirent_win.h  gambit_plt_stubs.cpp  main.cpp
port/loader/: gambit_game_register.cpp  gambit_loader.cpp
port/os/: gambit_plt_auto.cpp  os_common.h
port/os/coreinit/: coreinit_addrs.h  coreinit_fs.cpp  coreinit_memory.cpp  coreinit_misc.cpp  coreinit_sync.cpp  coreinit_threads.cpp
port/os/gx2/: gx2_addrs.h  gx2_attrib.h  gx2_context.cpp  gx2_draw.cpp  gx2_render.cpp  gx2_render.h  gx2_surface.h  r700_to_glsl.cpp  r700_to_glsl.h
port/os/nsysnet/: nsysnet.cpp
port/os/padscore/: padscore.cpp  padscore_addrs.h
port/os/snd_core/: snd_core.cpp  snd_core_addrs.h
port/os/stubs/: stubs.cpp  stubs_addrs.h
port/os/vpad/: vpad.cpp  vpad_addrs.h
port/runtime/: rebrewu_runtime.cpp  rebrewu_runtime.h  screen_mode.h
runtime/: CMakeLists.txt
runtime/include/: rebrewu_runtime.h
src/analysis/: CMakeLists.txt  cfg_builder.cpp  cfg_builder.hpp  function_discovery.cpp  function_discovery.hpp  jump_table.cpp  jump_table.hpp
src/cli/: CMakeLists.txt  cli_options.cpp  cli_options.hpp  main.cpp
src/codegen/: CMakeLists.txt  cpp_emitter.cpp  cpp_emitter.hpp  naming.cpp  naming.hpp
src/config/: CMakeLists.txt  config.cpp  config.hpp
src/core/: CMakeLists.txt
src/core/elf/: elf_reader.cpp  elf_reader.hpp  elf_types.hpp
src/core/linker/: linker.cpp  linker.hpp  module_graph.cpp  module_graph.hpp
src/core/relocation/: reloc_processor.cpp  reloc_processor.hpp
src/core/rpl/: rpl_loader.cpp  rpl_loader.hpp  rpl_types.hpp
src/core/rpx/: rpx_loader.cpp  rpx_loader.hpp  rpx_types.hpp
src/diagnostics/: CMakeLists.txt  diagnostics.cpp  diagnostics.hpp
src/ir/: CMakeLists.txt  ir_builder.cpp  ir_builder.hpp  ir_function.hpp  ir_module.hpp  ir_types.hpp
src/ppc/: CMakeLists.txt
src/ppc/decoder/: ppc_decode.cpp  ppc_decode.hpp
src/ppc/instructions/: ppc_fields.hpp
src/ppc/semantics/: ppc_semantics.cpp  ppc_semantics.hpp
tests/: CMakeLists.txt  test_analysis.cpp  test_codegen.cpp  test_elf_parse.cpp  test_ir.cpp  test_ppc_decode.cpp
tools/: plt_resolver.py
